# monado

./: CMakeLists.txt  drm_modifier_progress.md  git_diff.txt  monado_v3d_fix_documentation.md  test_cam.py  vk_pitch_test  vk_pitch_test.c
StereoKitTest/: StereoKitTest.csproj  test_output.txt
StereoKitTest/SKProjectName/: DemoHands.cs  Program.cs  SKProjectName.csproj
StereoKitTest/SKProjectName/Projects/Android/: SKProjectName.Android.csproj
brain/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved  task.md.metadata.json  task.md.resolved  task.md.resolved.0  task.md.resolved.1  task.md.resolved.2  task.md.resolved.3  walkthrough.md  walkthrough.md.metadata.json  walkthrough.md.resolved.0  walkthrough.md.resolved.1  walkthrough.md.resolved.2
src/xrt/auxiliary/util/: u_hardcoded_hand.h
src/xrt/auxiliary/vk/: vk_bundle_init_standalone.c  vk_helpers.c  vk_image_allocator.c  vk_image_allocator.c.rej  vk_image_allocator.h
src/xrt/compositor/client/: comp_gl_eglimage_swapchain.c  comp_vk_glue.c
src/xrt/compositor/main/: comp_compositor.c  comp_settings.c
src/xrt/compositor/util/: comp_swapchain.c
src/xrt/drivers/: CMakeLists.txt
src/xrt/drivers/ht/: ht_driver.c
src/xrt/drivers/simulated/: simulated_hmd.c
src/xrt/include/xrt/: xrt_compositor.h
src/xrt/ipc/client/: ipc_client_compositor.c
src/xrt/ipc/server/: ipc_server_handler.c
src/xrt/targets/common/: target_builder_legacy.c  (+1 more)
src/xrt/tracking/: CMakeLists.txt
src/xrt/tracking/mediapipe/: CMakeLists.txt  mp.py  mp_interface.h  mp_sync.c
(+4 files in other folders)
